samples/_failures_safe/1761168340_b85409_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04a78791.c: In function ‘main’:
./samples/SAFE/__tmp_04a78791.c:168:5: error: expected declaration or statement at end of input
  168 |     for (size_t i = 0; i < token_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_04a78791.c:168:5: error: expected declaration or statement at end of input
